feat: refactor state handling